dzn: Build failure with MSYS2 MinGW-W64 GCC targeting x86 32-bit
@lygstate worked to get dozen building with MSYS2 MinGW-W64 in !16084 (merged), but I don't think he tested 32-bit as there is a similar build failure there as the one this commit resolved.
Error
dozen-Werror_incompatible-pointer-types.txt
Setup MSYS2 for Mesa3D build
- Open MSYS2 MINGW32 shell and run these
pacman -Syu
pacman -Syu
pacman -S flex bison git ${MINGW_PACKAGE_PREFIX}-{python-mako,meson,pkgconf,vulkan-devel,llvm,zstd,cc} --needed --noconfirm
- Then chdir to Mesa3D source and run Meson as usual. Note that
-Dshared-llvm=enabled
is valid and works as expected when building with MSYS2 MinGW-W64.
Edited by Prodea Alexandru-Liviu