dzn: Fix incompatible pointer type error affecting MSYS2 MINGW32 Suggested-by: Yonggang Luo <luoyonggang@gmail.com> Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/6807

Reviewed-by: Jesse Natalie <jenatali@microsoft.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/17414>